--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ html { scroll-behavior: smooth; }
 body { color: var(--text-light); background-color: var(--bg-dark); overflow-x: hidden; position: relative; }
 
 /* --- Background Elements --- */
-#particles-js { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: -1; }
+/* Removed #grid-bg styling */
+#particles-js { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: -1; } /* Starfield background */
 
 /* Main Content Wrapper */
 #content { min-height: 100vh; padding-top: 70px; position: relative; z-index: 1; overflow-x: hidden; }
@@ -57,16 +58,8 @@ nav a:hover::after, nav a.active::after { width: 100%; }
 .hero { min-height: calc(100vh - 70px); display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; padding: 40px 20px; position: relative; }
 .hero h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 10px; color: var(--cyan-glow); text-shadow: 0 0 15px rgba(0, 229, 255, 0.6); }
 .hero h2 { font-size: 1.8rem; font-weight: 600; color: var(--cyan-glow); text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-bottom: 20px; }
-.hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; /* Reserve space for typed text */ }
-#typed-text {
-    border-right: 3px solid var(--cyan-accent);
-    animation: blink-caret 0.75s step-end infinite;
-    display: inline; /* Keep inline unless wrapping is needed */
-    vertical-align: bottom;
-    color: var(--text-light);
-    font-weight: 400;
-    min-height: 1.6em; /* Consistent height */
-}
+.hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; }
+#typed-text { border-right: 3px solid var(--cyan-accent); animation: blink-caret 0.75s step-end infinite; display: inline; vertical-align: bottom; color: var(--text-light); font-weight: 400; min-height: 1.6em; /* Ensure consistent height */ }
 @keyframes blink-caret { from, to { border-color: transparent; } 50% { border-color: var(--cyan-accent); } }
 .hero button { padding: 10px 25px; background: var(--cyan-accent); color: var(--bg-dark); border: none; border-radius: 50px; font-size: 0.9rem; cursor: pointer; transition: transform var(--transition-speed), background-color var(--transition-speed), box-shadow var(--transition-speed); font-weight: 600; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
 .hero button:hover { transform: translateY(-3px) scale(1.03); background: var(--cyan-glow); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); }
@@ -82,55 +75,38 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 
 /* --- Certificates Section --- */
 #certificates p { text-align:center; margin-bottom: 25px; color: var(--text-medium); font-size: 0.95rem;}
-.certificate-viewer {
-    margin-top: 0; display: flex; justify-content: center; align-items: center; position: relative;
-    border: 1px solid transparent; border-radius: 10px; background: transparent; padding: 0; overflow: hidden;
-    transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0;
-}
-.certificate-viewer:has(> .active) {
-    border-color: var(--charcoal); background: rgba(17, 17, 22, 0.4); padding: 15px; margin-top: 30px;
-}
+.certificate-viewer { margin-top: 0; display: flex; justify-content: center; align-items: center; position: relative; border: 1px solid transparent; border-radius: 10px; background: transparent; padding: 0; overflow: hidden; transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0; }
+.certificate-viewer:has(> .active) { border-color: var(--charcoal); background: rgba(17, 17, 22, 0.4); padding: 15px; margin-top: 30px; }
 /* Hide initially & base positioning */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
     opacity: 0; position: absolute; top: 50%; left: 50%;
-    transform: translate(-50%, -50%); /* Center using transform */
+    transform: translate(-50%, -50%); /* Center using transform ONLY */
     transition: opacity 0.5s ease; /* ** Only transition opacity for fade ** */
     pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
 }
 /* Show active */
 .certificate-viewer > .active {
-    opacity: 1; /* Fade in */
-    pointer-events: auto; position: relative; /* Takes space */ top: auto; left: auto; display: block;
-    transform: none; /* Reset transform */
-    max-width: 100%;
-    /* transition added above applies */
+    opacity: 1; pointer-events: auto; position: relative; top: auto; left: auto; display: block; transform: none; max-width: 100%;
 }
 /* Consistent sizing for ALL active elements */
 .certificate-viewer > img.active,
 .certificate-viewer #java-cert.active {
     max-height: 450px; /* ** Unified max height ** */
-    width: auto; /* Maintain aspect ratio */
-    margin: 10px auto; /* Center horizontally */
+    width: auto; margin: 10px auto;
 }
 /* Java container specific style when active */
 .certificate-viewer #java-cert.active {
-    display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap;
-    width: 100%; /* Ensure it spans width */
+    display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; width: 100%;
 }
 /* Images inside Java container */
 .certificate-viewer #java-cert.active img {
-    max-height: 350px; /* ** This was 400px ** */
-    max-width: 45%; /* Allows side-by-side */
-    width: auto; height: auto; /* Maintain aspect ratio */
-    object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-    position: static; /* Let flex layout work */
-    opacity: 1; transform: none; pointer-events: auto; /* Ensure normal behavior */
+    max-height: 400px; /* ** Slightly smaller than single cert height ** */
+    max-width: 45%; width: auto; height: auto; object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); position: static;
 }
 
-
 /* --- Projects Section --- */
-.projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; justify-items: center; /* Center items */ }
+.projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; justify-items: center; /* Center items within their grid cell */ }
 .project { background: var(--bg-medium); border-radius: 10px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5); overflow: hidden; transition: transform var(--transition-speed) ease-out, box-shadow var(--transition-speed) ease-out; border: 1px solid var(--charcoal); display: flex; flex-direction: column; width: 100%; max-width: 400px; }
 .project:hover { transform: translateY(-8px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.7); }
 .project img { width: 100%; height: 200px; object-fit: cover; display: block; border-bottom: 1px solid var(--charcoal); }
@@ -285,9 +261,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
 </head>
 
 <body>
-    <div id="particles-js"></div>
-
-    <audio id="bg-music" loop>
+    <div id="particles-js"></div> <audio id="bg-music" loop>
         <source src="Interstellar Cornfield Chase (PenduJatt.Com.Se).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
@@ -503,21 +477,24 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
         </footer>
     </div> <script>
         document.addEventListener("DOMContentLoaded", () => {
-            // Typing effect logic - LETTER BY LETTER
+            // Typing effect logic - LETTER BY LETTER (Slow)
             const typedTextElement = document.getElementById("typed-text");
             const textToType = "Curious developer passionate about building projects and learning new technologies!";
             let charIndex = 0;
-            const typingSpeed = 80; // Delay between letters (ms) - Increased for slower typing
+            const typingSpeed = 80; // Delay between letters (ms)
 
             function typeLetterByLetter() {
-                if (typedTextElement && charIndex < textToType.length) {
+                // Check if element exists before proceeding
+                if (!typedTextElement) return;
+
+                if (charIndex < textToType.length) {
                     typedTextElement.textContent += textToType.charAt(charIndex);
                     charIndex++;
                     setTimeout(typeLetterByLetter, typingSpeed);
-                } else if (typedTextElement) {
-                    // Typing finished: stop blinking caret
-                    typedTextElement.style.borderRightColor = 'transparent'; // Hide cursor
-                    typedTextElement.style.animation = 'none';
+                } else {
+                    // Typing finished: stop blinking caret by making border transparent
+                    typedTextElement.style.borderRightColor = 'transparent';
+                    typedTextElement.style.animation = 'none'; // Stop animation explicitly
                 }
             }
 
@@ -525,18 +502,18 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             if (typeof particlesJS !== 'undefined') {
                 particlesJS("particles-js", {
                     particles: {
-                        number: { value: 250, density: { enable: true, value_area: 800 } }, // More stars
+                        number: { value: 250, density: { enable: true, value_area: 800 } },
                         color: { value: "#ffffff" },
                         shape: { type: "circle" },
-                        opacity: { value: 0.8, random: true, anim: { enable: true, speed: 0.8, opacity_min: 0.1, sync: false } }, // Twinkle
-                        size: { value: 1.5, random: true, anim: { enable: false } }, // Small stars
-                        line_linked: { enable: false }, // NO lines
+                        opacity: { value: 0.8, random: true, anim: { enable: true, speed: 0.8, opacity_min: 0.1, sync: false } },
+                        size: { value: 1.5, random: true, anim: { enable: false } },
+                        line_linked: { enable: false }, // No lines
                         move: {
-                            enable: true, speed: 0.4, direction: "none", random: true, // Slow drift
+                            enable: true, speed: 0.4, direction: "none", random: true,
                             straight: false, out_mode: "out", bounce: false, attract: { enable: false }
                         }
                     },
-                    interactivity: { // Minimal interactivity
+                    interactivity: { // Minimal/No interactivity for starfield
                         detect_on: "canvas",
                         events: { onhover: { enable: false }, onclick: { enable: false }, resize: true },
                         modes: { grab: {}, bubble: {}, repulse: {}, push: {}, remove: {} }
@@ -547,11 +524,12 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
 
             // Start typing effect
             if (typedTextElement) {
-                typedTextElement.textContent = ''; // Clear initial text
-                // Ensure caret is visible initially
+                typedTextElement.textContent = ''; // Clear previous text
+                charIndex = 0; // Reset index
+                // Reset caret style before starting
                 typedTextElement.style.borderRight = '3px solid var(--cyan-accent)';
                 typedTextElement.style.animation = 'blink-caret 0.75s step-end infinite';
-                typeLetterByLetter(); // Start letter-by-letter typing
+                typeLetterByLetter(); // Start typing
             }
 
             // Background music
@@ -572,8 +550,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             if (!clickedCert) return;
 
             const isAlreadyActive = clickedCert.classList.contains("active");
-            allCerts.forEach(cert => { cert.classList.remove("active"); });
-            if (!isAlreadyActive) { clickedCert.classList.add("active"); }
+            allCerts.forEach(cert => { cert.classList.remove("active"); }); // Deactivate all
+            if (!isAlreadyActive) { clickedCert.classList.add("active"); } // Activate if it wasn't active
         }
 
         // Form submission
