--- a/index.html
+++ b/index.html
@@ -73,32 +73,103 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .skill:hover { background: rgba(0, 184, 212, 0.2); border-color: var(--cyan-accent); color: var(--cyan-glow); transform: translateY(-3px); box-shadow: 0 4px 10px rgba(0, 184, 212, 0.3); }
 
 /* --- Certificates Section --- */
+/* --- Certificates Section --- */
 #certificates p { text-align:center; margin-bottom: 25px; color: var(--text-medium); font-size: 0.95rem;}
-.certificate-viewer { margin-top: 0; display: flex; justify-content: center; align-items: center; position: relative; border: 1px solid transparent; border-radius: 10px; background: transparent; padding: 0; overflow: hidden; transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0; }
-.certificate-viewer:has(> .active) { border-color: var(--charcoal); background: rgba(17, 17, 22, 0.4); padding: 15px; margin-top: 30px; }
-/* Hide initially & base positioning */
+
+.certificate-viewer {
+    margin-top: 0; /* Collapse margin initially */
+    display: flex; /* Use flex to center the active item */
+    justify-content: center;
+    align-items: center;
+    position: relative; /* Needed for absolute positioning of children */
+    border: 1px solid transparent; /* Keep layout consistent, hide border */
+    border-radius: 10px;
+    background: transparent;
+    padding: 0;
+    overflow: hidden;
+    transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease, min-height 0.5s ease;
+    min-height: 0; /* Allow collapsing */
+}
+/* Apply styles ONLY when a certificate is visible */
+.certificate-viewer:has(> .active) {
+    border-color: var(--charcoal);
+    background: rgba(17, 17, 22, 0.4);
+    padding: 15px;
+    margin-top: 30px; /* Add margin back when visible */
+    min-height: 400px; /* Set a min-height when active to contain the certs */
+}
+
+/* Hide initially & base positioning for ALL direct children */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
-    opacity: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: opacity 0.5s ease; pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
+    opacity: 0;
+    position: absolute; /* Position absolutely for layering */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center */
+    transition: opacity 0.5s ease; /* Only transition opacity */
+    pointer-events: none; /* Non-interactive when hidden */
+    max-width: calc(100% - 30px); /* Fit within potential padding */
+    max-height: calc(100% - 30px);
+    width: auto;
+    height: auto;
 }
-/* Show active */
+
+/* Show active direct child - DOES NOT take space itself, acts as a layer */
 .certificate-viewer > .active {
-    opacity: 1; pointer-events: auto; position: relative; top: auto; left: auto; display: block; transform: none; max-width: 100%;
+    opacity: 1;
+    pointer-events: auto;
+    position: absolute; /* Keep absolute */
+    /* Size constraints */
+    max-width: 95%; /* Limit width within the viewer */
+    max-height: 95%; /* Limit height */
+    width: auto;
+    height: auto;
+    /* Reset transform if needed */
+    transform: translate(-50%, -50%); /* Keep centered */
 }
-/* Consistent sizing for ALL active elements */
-.certificate-viewer > img.active,
-.certificate-viewer > #java-cert.active {
-    max-height: 450px; /* ** Unified max height ** */
-    width: auto; margin: 10px auto;
+
+/* Specific size for single active images */
+.certificate-viewer > img.active {
+    max-height: 450px; /* Max height for single large certs */
+    object-fit: contain;
+    border-radius: 8px;
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
 }
+
 /* Java container specific style when active */
 .certificate-viewer #java-cert.active {
-    display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; width: 100%;
+    display: flex; /* Use flex to arrange children */
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    width: 100%; /* Take full available width */
+    height: 100%; /* Take full available height */
+    /* Ensure opacity/pointer events are set correctly */
+    opacity: 1;
+    pointer-events: auto;
+    position: absolute; /* Keep centered */
+    /* Other styles like max-height handled by .active */
 }
-/* Images inside Java container */
+
+/* Images inside the ACTIVE Java container */
 .certificate-viewer #java-cert.active img {
-    max-height: 400px; /* ** Slightly smaller than single cert height ** */
-    max-width: 45%; width: auto; height: auto; object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); position: static;
+    max-height: 350px; /* ** Smaller than single certs ** */
+    max-width: 48%; /* Allow side-by-side, adjust % if needed */
+    width: auto; height: auto; /* Maintain aspect ratio */
+    object-fit: contain;
+    border-radius: 6px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+    /* Make them behave like inline elements within the flex container */
+    display: inline-block;
+    vertical-align: middle;
+    /* No absolute positioning needed here */
+    position: static;
+    /* Ensure visible */
+    opacity: 1;
+    pointer-events: auto;
+    transform: none;
 }
 
 /* --- Projects Section --- */
